Small refactor and add dtos
